--- a/AppGallery/AppGallery/XamarinForms/Paginas/Abas/Abas.xaml
+++ b/AppGallery/AppGallery/XamarinForms/Paginas/Abas/Abas.xaml
@@ -2,25 +2,25 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-            BarBackgroundColor="Black"
-            SelectedTabColor="Red"
+            BarBackgroundColor="#333"
+            SelectedTabColor="Azure"
             UnselectedTabColor="DarkGray"
             android:TabbedPage.ToolbarPlacement="Bottom"
              x:Class="AppGallery.XamarinForms.Paginas.Abas.Abas">
-  <!--Pages can be added as references or inline-->
-    <!--<ContentPage Title="Tab 1">
+
+    <ContentPage Title="Tab 1">
         <StackLayout>
-            <Label Text="Pagina 1" HorizontalOptions="Center"  VerticalOptions="Center"/>
+            <Label Text="Pagina 1" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"/>
         </StackLayout>
-    </ContentPage>        -->
+    </ContentPage>        
     <ContentPage Title="Tab 2" IconImageSource="logo.png">
         <StackLayout>
-            <Label Text="Pagina 2" HorizontalOptions="Center"  VerticalOptions="Center"/>
+            <Label Text="Pagina 2" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"/>
         </StackLayout>
     </ContentPage>
-   <!-- <ContentPage Title="Tab 3">
+    <ContentPage Title="Tab 3">
         <StackLayout>
-            <Label Text="Pagina 3" HorizontalOptions="Center"  VerticalOptions="Center"/>
+            <Label Text="Pagina 3" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"/>
         </StackLayout>
-    </ContentPage>-->
+    </ContentPage>
 </TabbedPage>
