--- a/AppGallery/AppGallery/AppBase/Menu.xaml
+++ b/AppGallery/AppGallery/AppBase/Menu.xaml
@@ -14,6 +14,10 @@
                 <Button Text="Carousel Page" Clicked="AbrirCarouselPage"/>
                 <Button Text="Tabbed Page" Clicked="AbrirTabbedPage"/>
                 <Button Text="Modal" Clicked="AbrirPagModal"/>
+
+                <Label Text="Layouts" />
+                <Button Text="Stack Layout" Clicked="AbrirStackLayout"/>
+                
             </StackLayout>
         </ContentPage>
     </MasterDetailPage.Master>
